--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+  <head><title>The Xyzdesk Organisation</title></head>
 <body>
-<p class="font-family: segoe-ui;">WIP</p>
+  <h4 class="font-family: Segoe UI;">We've Moved!</h4>
+  <button class="font-family: Segoe UI;" href="http://www.xyzdesk.online">Xyzdesk Official Website</button>
 </body>
 </html>
